<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/app_horizontal_margin"
    android:layout_marginEnd="@dimen/app_horizontal_margin"
    android:layout_marginTop="@dimen/app_vertical_margin"
    android:layout_marginBottom="@dimen/app_vertical_margin"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/inscription_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/doge_coin"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inscription_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_create"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/login_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inscription_title"
            android:text="@string/main_email_hint" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email_title"
            android:hint="@string/main_email_hint"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/login_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:layout_marginTop="@dimen/app_vertical_separation"
            android:text="@string/main_password_hint" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_title"
            android:hint="@string/main_password_hint"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/app_vertical_separation"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_cancel_btn" />

            <Button
                android:id="@+id/login_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_horizontal_separation"
                android:text="@string/main_validate_btn" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>